# lgf-automation

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: approvals-monthly.yml  approvals-weekly.yml  approvals-yesterday.yml  approvals.yml  sales-ondemand.yml  skool.yml  snapshot.yml
api/: requirements.txt  slack.py
app/: config.py  main.py
app/routers/: reports.py  snapshots.py
app/services/: approvals.py  browser_capture.py  renderer.py  screenshot.py  sheets.py  slack.py  slack_commands.py
app/templates/: report.html.j2
app/themes/: dark_gold.css  dark_green.css
docs/: SCHEDULING.md  SETUP-slack-commands.md
scripts/: approvals.py  skool.py  snapshot.py
tests/: test_renderer.py  test_reports.py  test_routes.py  test_skool.py  test_slack.py  test_slack_commands.py
tests/fixtures/: apps_rows.json  sample_values.json
