[project]
name = "lgf-automation"
version = "0.1.0"
description = "FastAPI service that snapshots Google Sheets ranges into PNGs and posts to Slack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "playwright>=1.48",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "slack-sdk>=3.33",
    "httpx>=0.27",
    "lxml>=5.3",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
